# vogix16

./: .envrc  .gitignore  .release-please-config.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  README.md  TESTING.md  TODO.md  clone_all_apps.sh  devenv.nix  devenv.yaml  flake.nix  test.sh
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  theme_submission.yml
.github/workflows/: ci-and-release.yml  ci.yml  release-please.yml
docs/: app-module-template.nix  architecture.md  cli.md  design-system.md  reload.md  theming.md  vogix16-design-system.md
nix/: rust.nix
nix/modules/: ansi16-import.nix  base16-import.nix  home-manager.nix  nixos.nix  vogix16-import.nix
nix/vm/: README.md  home.nix  test-vm.nix  test.nix
scripts/: README.md  demo.sh  extract-themes.py  preview-themes.sh  validate-themes.py  verify-theme-colors.py
src/: cli.rs  config.rs  errors.rs  generator.rs  main.rs  reload.rs  scheme.rs  state.rs  symlink.rs  theme.rs
src/cache/: mod.rs  paths.rs  renderer.rs  tests.rs
src/commands/: cache.rs  completions.rs  list.rs  mod.rs  refresh.rs  status.rs  theme_change.rs
src/config/: mod.rs  tests.rs  types.rs
src/template/: filters.rs  mod.rs  render.rs  tests.rs
src/theme/: discovery.rs  mod.rs  query.rs  types.rs
templates/: alacritty.template  btop.template  console.template  ls-colors.template  shell-colors.template  waybar.template
templates/ansi16/: alacritty.toml.vogix  bat.tmTheme.vogix  btop.theme.vogix  console.palette.vogix  ripgrep.conf.vogix
templates/base16/: alacritty.toml.vogix  bat.tmTheme.vogix  (+3 more)
themes/: README.md  aikido.nix  arctic_aurora.nix  ayu.nix  blue.nix  brushtrees.nix  charcoal.nix  chicago.nix  classic.nix  crystal_cave.nix  cyberspace.nix  default.nix  desert.nix  dracula.nix  edge.nix  equilibrium.nix  equilibrium_gray.nix  flexoki.nix  forest_night.nix  futuristic.nix  ghost.nix  github.nix  google.nix  grayscale.nix  green.nix  gruvbox.nix  harmonic.nix  heetch.nix  horizon.nix  horizon_terminal.nix  humanoid.nix  ia.nix  mainframe.nix  matrix.nix  measured.nix  nord.nix  nordic.nix  ocean_depths.nix  orange.nix  oxocarbon.nix  (+23 more)
(+63 files in other folders)
