[package]
name = "vogix"
version = "0.3.0"
edition = "2024"
authors = ["i-am-logger"]
description = "Runtime theme management for NixOS with the Vogix16 design system"
license = "CC-BY-NC-SA-4.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# System utilities
dirs = "5.0"
glob = "0.3"
libc = "0.2"

# Date/time for state timestamps
chrono = "0.4"

# Sway IPC
swayipc = { version = "3.0", optional = true }

[features]
default = []
sway = ["swayipc"]
