[package]
name = "vogix"
version = "0.5.1"
edition = "2024"
authors = ["i-am-logger"]
description = "Runtime theme management for NixOS with the vogix16 design system"
license = "CC-BY-NC-SA-4.0"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"

# Logging
log = "0.4"
env_logger = "0.11"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
serde_yaml = "0.9"

# Template rendering
tera = "1.20"

# System utilities
dirs = "5.0"
glob = "0.3"

# Error handling
thiserror = "2.0"

# Date/time for state timestamps
chrono = "0.4"

# Sway IPC
swayipc = { version = "3.0", optional = true }

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
sway = ["swayipc"]
